--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -53,7 +53,8 @@
     {% endif %}
     
     {% if post.citation and post.paperurl %}
-      <p>Citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
+      <p>Citation: {{ post.citation }} <a href="{{ post.paperurl }}"><br>
+        <u><a href="{{ post.paperurl }}">View</u></a></p>
     {% elsif post.citation %}
       <p>Citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
