--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -54,7 +54,7 @@
     
     {% if post.citation and post.paperurl %}
       <p>Citation: {{ post.citation }} <a href="{{ post.paperurl }}"><br>
-        <u><a href="{{ post.paperurl }}">View</u></a></p>
+        Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% elsif post.citation %}
       <p>Citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
