--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,7 +41,7 @@
         {% if post.collection == 'teaching' %}
           <p><i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'press' %}
-        <p><i>{{ post.author }}</i>. <b>{{ post.title }}</b>. {{ post.publisher }}.  {{ post.date | default: "1900-01-01" | date: "%m %d, %Y" }}. <a href="{{ post.link}}">{{ post.link}}</a></p>
+        <p><i>{{ post.author }}</i>. <b>{{ post.title }}</b>. {{ post.publisher }}.  {{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}. <a href="{{ post.link}}">{{ post.link}}</a></p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
